--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
-    "types": ["node"],
-    "typeRoots": ["../node_modules/@types"],
-    "lib": ["es2020"],
+    "target": "ES2022",
     "module": "ESNext",
-    "target": "es2020",
-    "esModuleInterop": true,
-    "strict": true,
-    "resolveJsonModule": true,
     "moduleResolution": "node",
+    "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
+    "resolveJsonModule": true,
     "outDir": "./dist"
   },
-  "include": ["./**/*.ts"]
+  "include": ["./*.ts"]
 }
