fix: correct Wormhole sequence tracking and PDA derivation
The Wormhole sequence tracker stores the sequence Wormhole will assign to
the NEXT post_message call — i.e. the actual VAA sequence.

Before this fix, send_greeting.rs used 'tracker + 1' for everything (both
the message PDA seed and the emitted event). This caused two problems:

1. The event/logs reported the wrong sequence (tracker+1 vs actual tracker).
2. sendToSepolia.ts polled for the wrong VAA sequence.

The message PDA intentionally uses 'tracker + 1' to avoid colliding with the
init message PDA (which uses wormhole::INITIAL_SEQUENCE = tracker value right
after initialization). Only the event emission and VAA polling needed fixing.

Changes:
- send_greeting.rs: separate vaa_sequence (actual) vs pda_sequence (tracker+1)
  - emit GreetingSent.sequence = vaa_sequence (tracker, the real VAA sequence)
  - PDA seeds = pda_sequence (tracker+1, avoids init collision)
- sendToSepolia.ts: vaaSequence for polling, pdaSequence for PDA derivation
- initialize.ts: always re-register peer if address changed (not skip-if-exists)
- config.ts: updated default EVM contract address

Tested: both Solana→Sepolia and Sepolia→Solana E2E confirmed working.

--- a/e2e/.env.example
+++ b/e2e/.env.example
@@ -1,15 +1,21 @@
-# Solana keypair - one of: JSON array, base58 string, or file path
-PRIVATE_KEY_SOLANA=[1,2,3,...]
-# Or use a file path:
-# SOLANA_KEYPAIR_PATH=~/.config/solana/id.json
+# ── Keys ──────────────────────────────────────────────────────────────────────
+# Solana keypair: JSON array of bytes OR a path to a keypair file
+# PRIVATE_KEY_SOLANA=[1,2,3,...]
+SOLANA_KEYPAIR_PATH=~/.config/solana/id.json
 
-# Sepolia private key (for EVM peer registration via setupPeers.ts)
+# Sepolia private key (used by setupPeers.ts to register the Solana emitter PDA)
 PRIVATE_KEY_SEPOLIA=0x...
 
-# Optional: override default RPC endpoints
+# ── RPC endpoints (optional — defaults are public nodes) ─────────────────────
 # SOLANA_DEVNET_RPC=https://api.devnet.solana.com
 # SEPOLIA_RPC_URL=https://ethereum-sepolia-rpc.publicnode.com
 
-# Optional: override default contract addresses
-# HELLO_EXECUTOR_SOLANA=5qAHNEvdL7gAj49q4jm1718h6tCGX5q8KBurM9iiQ4Rp
+# ── Contract / program addresses ─────────────────────────────────────────────
+# These default to the latest deployed values in config.ts.
+# Override here after a fresh deployment.
+#
+# TODO(redeploy): After deploying a new Solana program binary, update both of
+# these to match the new deployment, then re-run initialize.ts and setupPeers.ts.
+
+# HELLO_EXECUTOR_SOLANA=7eiTqf1b1dNwpzn27qEr4eGSWnuon2fJTbnTuWcFifZG
 # HELLO_WORMHOLE_SEPOLIA=0x978d3cF51e9358C58a9538933FC3E277C29915C5
